--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "create-bucket.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon server.js --ignore client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1334.0",
     "express": "^4.18.2",
+    "nodemon": "^2.0.21",
     "uuid": "^9.0.0"
   }
 }
